"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-02-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-66:
	  Added new helper script: hac-cpp[.in] to wrap calls to cpp.
		No test cases added yet.
	  Object/def/template_formals_manager.cc: improved port type
		mismatch diagnostic message to name the actual and port.
		Test cases (compile expect-fail) updated.


2010-01-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-65:
	  No source revision, only lib/alternator.hac CRITICAL fix.


2010-01-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-64:
	  hacprsim: added new command 'channel-report-time' to display
		timestamp of channel data events when watched or logged.
	  Documented and updated test cases, accordingly.  


2010-01-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-63:
	  hacknet: new option to allow non-CMOS precharges, for when you
		you really know what you're doing with -Vt.
		option: non_CMOS_precharge=(warn|ignore|error)
		default is warn.
	  Documented, test cases added.


	* HACKT-00-01-04-main-00-83-62:
	  hacknet: emit 'pass' in transistor names that come from
		PRS passn/passp macros, as if it were an attribute.  
	  Test cases updated.


2010-01-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-61:
	  hacknet: fixed -T type mode which was failing on global
		parameters.  solution: re-import global parameters.
	  Test cases added.


2010-01-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-60:
	  hacknet: improved diagnostics, print out relevant PRS rules
		in error messages, where applicable.
		Test cases updated.  


2010-01-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-59: