@@ -1,0 +1,11 @@
+// "fet-type-12.hac"
+// testing rule-attributes for setting Vt flavors
+// note: complement inherits same vt
+
+bool x, y, z, w;
+
+prs {
+[hvt]	x & y	=> z-
+	x | y	=> w-
+}
+
