@@ -1,0 +1,9 @@
+Mz:dn:0 !GND x #0 !GND nch_hvt W=5u L=2u
+Mz:dn:1 #0 y z !GND nch_hvt W=5u L=2u
+Mz:up:0 !Vdd x z !Vdd pch_hvt W=5u L=2u
+Mz:up:1 !Vdd y z !Vdd pch_hvt W=5u L=2u
+Mw:dn:0 !GND x w !GND nch W=5u L=2u
+Mw:dn:1 !GND y w !GND nch W=5u L=2u
+Mw:up:0 !Vdd x #1 !Vdd pch W=5u L=2u
+Mw:up:1 #1 y w !Vdd pch W=5u L=2u
+
