@@ -1,0 +1,11 @@
+// "fet-type-17.hac"
+// copy-modified from "fet-type-16.hac"
+// testing rule-attributes for setting Vt flavors, with precharge
+// note: complement rule follows same per-literal vt
+
+bool x, y, z, w;
+
+prs {
+[lvt]	x<;svt> &{+~x} y & z	#> w-
+}
+
