@@ -1,0 +1,11 @@
+// "fet-type-18.hac"
+// testing rule-attributes for setting Vt flavors, with internal node
+// note: complement rule follows same per-literal vt
+
+bool x, y, z, w;
+
+prs {
+[hvt]	x			-> @_int-	// no effect
+	~@_int & y & z		-> w-
+}
+
