@@ -1,0 +1,4 @@
+M@_int:dn:0 !GND x @_int !GND nch W=5u L=2u
+Mw:dn:0 @_int y #0 !GND nch W=5u L=2u
+Mw:dn:1 #0 z w !GND nch W=5u L=2u
+
