@@ -1,0 +1,13 @@
+// "fet-type-20.hac"
+// copy-modified from "fet-type-19.hac"
+// testing rule-attributes for setting Vt flavors, with internal node
+// note: complement rule follows same per-literal vt
+
+bool x, y, z, w, a, b;
+
+prs {
+	x			-> @_int-
+[hvt]	~@_int & y & z		-> w-	// first use sets type of x<>
+	~@_int & a		-> b-
+}
+
