@@ -1,0 +1,13 @@
+// "fet-type-24.hac"
+// copy-modified from "fet-type-23.hac"
+// testing rule-attributes for setting Vt flavors, with internal node
+// note: complement rule follows same per-literal vt
+
+bool x, y, z, w, a, b;
+
+prs {
+	x				-> @_int-
+[hvt=1]	~@_int &{+~x<;lvt>} y & z	-> w-	// first use sets type of x<>
+	~@_int & a			-> b-
+}
+
